objects/Our_Product__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Names__c</fullName>
        <label>Brand Names</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>List_of_Products__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nike</fullName>
                </value>
                <value>
                    <fullName>Adidas</fullName>
                </value>
                <value>
                    <fullName>Puma</fullName>
                </value>
                <value>
                    <fullName>Woodland</fullName>
                </value>
                <value>
                    <fullName>Reebok</fullName>
                </value>
                <value>
                    <fullName>MONTBLANC</fullName>
                </value>
                <value>
                    <fullName>Gianni Versace</fullName>
                </value>
                <value>
                    <fullName>Vera Wang</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Real Madrid</fullName>
                </value>
                <value>
                    <fullName>AC Milan</fullName>
                </value>
                <value>
                    <fullName>Chelsea</fullName>
                </value>
                <value>
                    <fullName>Liverpool</fullName>
                </value>
                <value>
                    <fullName>United Hair Bandana</fullName>
                </value>
                <value>
                    <fullName>Liverpool Bracelet</fullName>
                </value>
                <value>
                    <fullName>Milan Necklace</fullName>
                </value>
                <value>
                    <fullName>Maggie</fullName>
                </value>
                <value>
                    <fullName>Lays</fullName>
                </value>
                <value>
                    <fullName>Kurkure</fullName>
                </value>
                <value>
                    <fullName>Oreo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_of_Products__c</fullName>
        <label>Cost of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_of_Products__c</fullName>
        <label>List of Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food Items</fullName>
                </value>
                <value>
                    <fullName>Jerseys</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Perfumes</fullName>
                </value>
                <value>
                    <fullName>Shoes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Models__c</fullName>
        <label>Models</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Brand_Names__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sneakers</fullName>
                </value>
                <value>
                    <fullName>Derby</fullName>
                </value>
                <value>
                    <fullName>Oxford</fullName>
                </value>
                <value>
                    <fullName>Loafers</fullName>
                </value>
                <value>
                    <fullName>Monk</fullName>
                </value>
                <value>
                    <fullName>Brogue</fullName>
                </value>
                <value>
                    <fullName>Boat</fullName>
                </value>
                <value>
                    <fullName>Slip-Ons</fullName>
                </value>
                <value>
                    <fullName>Athletics</fullName>
                </value>
                <value>
                    <fullName>Hair Band</fullName>
                </value>
                <value>
                    <fullName>Bracelet</fullName>
                </value>
                <value>
                    <fullName>Necklace</fullName>
                </value>
                <value>
                    <fullName>Atta Noodles</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Greeni</fullName>
                </value>
                <value>
                    <fullName>Dark Green</fullName>
                </value>
                <value>
                    <fullName>Chilli</fullName>
                </value>
                <value>
                    <fullName>Tomato</fullName>
                </value>
                <value>
                    <fullName>Green Chilli</fullName>
                </value>
                <value>
                    <fullName>Floral</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
                <value>
                    <fullName>Woody</fullName>
                </value>
                <value>
                    <fullName>Oriental</fullName>
                </value>
                <value>
                    <fullName>Fruity</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Oceanic</fullName>
                </value>
                <value>
                    <fullName>Spicy</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units_Available__c</fullName>
        <label>Units Available</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Our Product</label>
    <listViews>
        <fullName>Product_Management_Our_Product</fullName>
        <filterScope>Queue</filterScope>
        <label>Product Management</label>
        <queue>Product_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Our Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Duplicates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
isNew(),
Not( ISBLANK(VLOOKUP( $ObjectType.Our_Product__c.Fields.Name,$ObjectType.Our_Product__c.Fields.Name, Name )))
)</errorConditionFormula>
        <errorMessage>No Duplicacy Allowed Here</errorMessage>
    </validationRules>
</CustomObject>